--- a/dashboard.html
+++ b/dashboard.html
@@ -252,7 +252,7 @@
 
 <body>
     <div class="sidebar closed">
-        <h2> <img src="Photos/logo.png"></h2>
+        <h2><img src="Photos/logo.png" alt="Logo"></h2>
         <ul>
             <li><a href="employee_task_manager.html"><i class="fas fa-users"></i> Staff</a></li>
             <li><a href="DailyReport.html"><i class="fas fa-tasks"></i> Daily Report</a></li>
@@ -279,7 +279,7 @@
                     </div>
                 </div>
                 <span style="margin-left: 20px;">Welcome, <span id="username">User</span>
-                    <button class="btn btn-outline-light btn-sm" onclick="window.location.href='login.html';">Logout</button>
+                    <button class="btn btn-outline-light btn-sm" onclick="window.location.href='index.html';">Logout</button>
                 </span>
             </div>
         </div>
@@ -323,10 +323,11 @@
                 <thead>
                     <tr>
                         <th>Project Name</th>
-                        <th>Task Name</th>
+                        <th>Task Description</th>
+                        <th>Location</th>
+                        <th>Priority</th>
                         <th>Assigned To</th>
                         <th>Start Date</th>
-                        <th>Priority</th>
                     </tr>
                 </thead>
                 <tbody id="activeTasksTable"></tbody>
@@ -337,13 +338,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script>
-        const mockEmployees = [
-            { staffId: 1, name: 'John', surname: 'Doe', workLocation: 'Office', position: 'Developer', status: 'Unassigned' },
-            { staffId: 2, name: 'Jane', surname: 'Smith', workLocation: 'Remote', position: 'Designer', status: 'Active' },
-            { staffId: 3, name: 'Mike', surname: 'Johnson', workLocation: 'Office', position: 'Manager', status: 'Unassigned' },
-            { staffId: 4, name: 'Emily', surname: 'Davis', workLocation: 'Remote', position: 'Developer', status: 'Active' }
-        ];
-
         const notifications = [];
 
         function showNotification(message) {
@@ -365,8 +359,8 @@
             });
         }
 
-        function populateUnassignedStaff(employees) {
-            const unassignedEmployees = employees.filter(employee => employee.status === 'Unassigned');
+        function populateUnassignedStaff() {
+            const unassignedEmployees = JSON.parse(localStorage.getItem('unassignedEmployees')) || [];
             const tableBody = document.getElementById('unassignedStaffTable');
             tableBody.innerHTML = '';
 
@@ -381,22 +375,23 @@
             });
         }
 
-        function populateActiveTasks(employees) {
-            const activeTasks = employees.filter(employee => employee.status === 'Active');
+        function populateActiveTasks() {
+            const activeTasks = JSON.parse(localStorage.getItem('activeTasks')) || [];
             const tableBody = document.getElementById('activeTasksTable');
             tableBody.innerHTML = '';
 
             if (activeTasks.length === 0) {
-                tableBody.innerHTML = '<tr><td colspan="5">No active tasks found.</td></tr>';
+                tableBody.innerHTML = '<tr><td colspan="6">No active tasks found.</td></tr>';
             }
 
             activeTasks.forEach(task => {
                 const row = tableBody.insertRow();
-                row.insertCell(0).innerText = task.workLocation;
-                row.insertCell(1).innerText = task.position;
-                row.insertCell(2).innerText = `${task.name} ${task.surname}`;
-                row.insertCell(3).innerText = 'N/A';
-                row.insertCell(4).innerText = 'N/A';
+                row.insertCell(0).innerText = task.projectName;
+                row.insertCell(1).innerText = task.taskDescription;
+                row.insertCell(2).innerText = task.location;
+                row.insertCell(3).innerText = task.priority;
+                row.insertCell(4).innerText = task.assignedTo;
+                row.insertCell(5).innerText = task.startDate;
             });
         }
 
@@ -406,8 +401,8 @@
         }
 
         window.onload = () => {
-            populateUnassignedStaff(mockEmployees);
-            populateActiveTasks(mockEmployees);
+            populateUnassignedStaff();
+            populateActiveTasks();
 
             // Example notifications for testing
             completeTaskByChris();
